--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
+  		<groupId>org.junit.jupiter</groupId>      <!-- NOT org.junit here -->
   		<artifactId>junit-jupiter-api</artifactId>
   		<version>5.5.1</version>
   	</dependency>
