--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,14 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
+    <resources>
+      <resource>
+        <directory>src</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -19,7 +27,7 @@
   </build>
   <dependencies>
   	<dependency>
-  		<groupId>org.junit.jupiter</groupId>      <!-- NOT org.junit here -->
+  		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-api</artifactId>
   		<version>5.5.1</version>
   	</dependency>
