--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,12 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
-  		<artifactId>junit-jupiter-api</artifactId>
-  		<version>5.5.1</version>
-  	</dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>     <!-- NOT org.junit here -->
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.5.1</version>
+        <scope>test</scope>
+    </dependency>
   	<dependency>
   		<groupId>javax.json</groupId>
   		<artifactId>javax.json-api</artifactId>
