--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-    <dependency>
-       <groupId>org.junit.jupiter</groupId>     <!-- NOT org.junit here -->
-       <artifactId>junit-jupiter-api</artifactId>
-       <version>5.5.1</version>
-    </dependency>
+ <dependencies>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.5.1</version>
+  	</dependency>
   	<dependency>
   		<groupId>javax.json</groupId>
   		<artifactId>javax.json-api</artifactId>
