--- a/pom.xml
+++ b/pom.xml
@@ -26,16 +26,17 @@
     </plugins>
   </build>
  <dependencies>
-  	<dependency>
-  		<groupId>org.junit.jupiter</groupId>
-  		<artifactId>junit-jupiter-api</artifactId>
-  		<version>5.5.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.json</groupId>
-  		<artifactId>javax.json-api</artifactId>
-  		<version>1.0</version>
-  	</dependency>
+  <dependency>
+  	<groupId>org.junit.jupiter</groupId>
+  	<artifactId>junit-jupiter-api</artifactId>
+  	<version>5.5.1</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+  	<groupId>javax.json</groupId>
+  	<artifactId>javax.json-api</artifactId>
+  	<version>1.0</version>
+  </dependency>
   </dependencies>
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
