--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,9 @@
   </build>
  <dependencies>
   <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-  </dependency>
-  <dependency>
-      <groupId>junit</groupId>     <!-- NOT org.junit here -->
-      <artifactId>junit-dep</artifactId>
-      <version>4.8.2</version>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.5.1</version>
   </dependency>
   <dependency>
   	<groupId>javax.json</groupId>
