--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
   	<version>5.5.1</version>
   </dependency>
   <dependency>
-  	<groupId>javax.json</groupId>
-  	<artifactId>javax.json-api</artifactId>
-  	<version>1.0</version>
-  </dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-core</artifactId>
+		<version>1.3</version>
+	</dependency>
  </dependencies>
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
