--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,15 @@
   </build>
  <dependencies>
   <dependency>
-  　　<groupId>org.junit.jupiter</groupId>
+  　　　<groupId>org.junit.jupiter</groupId>
   	<artifactId>junit-jupiter-api</artifactId>
   	<version>5.5.1</version>
   </dependency>
   <dependency>
-	<groupId>org.hamcrest</groupId>
-	<artifactId>hamcrest-core</artifactId>
-	<version>1.3</version>
-　</dependency>
+  　　　<groupId>javax.json</groupId>
+  	<artifactId>javax.json-api</artifactId>
+  	<version>1.0</version>
+  </dependency>
  </dependencies>
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
