--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>3.0.0-M4</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
